[package]
name = "nos"
description = "Simple Actor for Rust (with Tokio)"
version = "0.2.0"
edition = "2021"
authors = ["ReiRokusanami <reirokusanami.rdh@gmail.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["rt-multi-thread", "sync"] }
tracing = { version = "0.1", features = [] }
async-trait = "0.1"
thiserror = "1"
dyn-hash = "0.2"

[dev-dependencies]
anyhow = "1.0.81"
tokio = { version = "*", features = ["full"] }
uuid = { version = "*", features = ["v4"] }