[package]
name = "diazene"
description = "Simple Actor for Rust (with Tokio)"
version = "0.3.1"
edition = "2021"
authors = ["ReiRokusanami <reirokusanami.rdh@gmail.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1", features = ["rt-multi-thread", "sync"] }
tracing = { version = "0.1", features = [] }
async-trait = "0.1"
thiserror = "1"
dyn-hash = "0.2"
anyid = "0.1"

[dev-dependencies]
anyhow = "1.0.81"
tokio = { version = "^1", features = ["full"] }
uuid = { version = "^1.8", features = ["v4"] }